[package]
name = "petprintpdfjs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
keywords = ["pdf", "printing", "combine"]
repository = "https://github.com/kevinlacotaco/pdfprint"
readme = "README.md"
license = "MIT"
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "petprintpdfjs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printers = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
mupdf = "0.5.0"
tokio = { version = "1.47.1", features = ["time"] }
tempfile = "3.20.0"
tauri-plugin-log = "2"
log = "0.4.27"
time = { version = "0.3.41", features = ["formatting"] }


[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
single_call_fn = "allow"
needless_return = "allow"
implicit_return = "deny"
multiple_crate_versions = "allow"
print_stdout = "deny"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
